--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentDirectiveEditForm.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentDirectiveEditForm.html
@@ -1,10 +1,9 @@
-  <xml:group>
+<xml:group>
 
 <component-itemdependencies>
-
   <table id="itemDependenciesGrid">
     <thead>
-       <tr><td>Col1</td><td>Col2</td><td>Col3</td></tr>
+      <tr><td>Col1</td><td>Col2</td><td>Col3</td></tr>
     </thead>
     <tbody>
       <tr><td>Col1</td><td>Col2</td><td>Col3</td></tr>
@@ -15,9 +14,9 @@
 </component-itemdependencies>
 
 <component-body>
-	<div id="container">
-		<div id="editForm"></div>
-	</div>
+  <div id="container">
+    <div id="editForm"></div>
+  </div>
 </component-body>
 
 <component-form>
@@ -26,160 +25,168 @@
   <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/rudder/angular/passwordForm.js" id="angular-passwordForm"></script>
   <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/rudder/angular/textForm.js" id="angular-textForm"></script>
   <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/rudder/angular/tags.js"></script>
-
-  <div class="box" id="editForm"> 
-    <div class="box-header with-border">
-      <h3 class="box-title"><i class="fa fa-file-text" aria-hidden="true"></i>Directive <b id="directiveTitle"></b></h3>
+  <div id="editForm">
+    <div class="main-header">
+      <div class="header-title">
+        <h1>
+          <i class="title-icon fa fa-file-text"></i>
+          <span id="info-title">Directive <b id="directiveTitle"></b></span>
+        </h1>
+        <lift:authz role="directive_edit">
+          <div class="header-buttons">
+            <button id="removeAction"     ></button>
+            <button id="desactivateAction"></button>
+            <button id="clone"            ></button>
+            <button id="save"             ></button>
+          </div>
+        </lift:authz>
+      </div>
+      <div class="header-description">
+        <p id="shortDescription"></p>
+      </div>
     </div>
-      <div id="edit-box" class="box-body">
-        <div class="callout callout-warning" id="deprecation-warning" role="alert">
+    <div class="main-navbar" id="navbar-scrollspy">
+      <ul class="ui-tabs-nav nav nav-tabs">
+        <li class="ui-tabs-tab" role="presentation">
+          <a href="#directiveInfo" onclick="navScroll(event, '#directiveInfo', '.main-details')">
+            Information
+          </a>
+        </li>
+        <li class="ui-tabs-tab" role="presentation">
+          <a href="#parametersTitle" onclick="navScroll(event, '#parametersTitle', '.main-details')">
+            Parameters
+          </a>
+        </li>
+        <li class="ui-tabs-tab" role="presentation">
+          <a href="#directiveRulesTabTitle" onclick="navScroll(event, '#directiveRulesTabTitle', '.main-details')">
+            Target Rules
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div id="notifications"></div>
+    <div id="isDisabled"></div>
+    <div class="main-details">
+      <div class="callout callout-warning" id="deprecation-warning" role="alert">
+        <div class="marker">
+          <span class="glyphicon glyphicon-info-sign"></span>
+        </div>
+        <h4>Technique version deprecated</h4>
+        <div>This Directive uses a version of this Technique that is deprecated: <span id="deprecation-message"></span>.<br/>
+          <span id="migrate-button"></span>
+        </div>
+      </div>
+      <lift:authz role="directive_edit">
+        <div class="col-lg-12 callout-fade callout-info" id="pendingChangeRequestNotification">
           <div class="marker">
             <span class="glyphicon glyphicon-info-sign"></span>
           </div>
-          <h4>Technique version deprecated</h4>
-          <div>This Directive uses a version of this Technique that is deprecated: <span id="deprecation-message"></span>.<br/>
-             <span id="migrate-button"></span>
-          </div>
-        </div>
-        <lift:authz role="directive_edit">
-          <div class="col-lg-12 callout-fade callout-info" id="pendingChangeRequestNotification">
-            <div class="marker">
-              <span class="glyphicon glyphicon-info-sign"></span>
-            </div>
-            <h4>Pending change requests</h4>
-            <p>
-              The following pending change requests affect this Directive, you should check that your modification is not already pending:
-            </p>
-            <ul id="changeRequestList"></ul>
-          </div>
-        </lift:authz>
-        <div id="isDisabled"></div>
-  	  	<div id="directiveInfoTab" class="unfoldedSection" onclick="$('#directiveInfo').toggle(400); $('#directiveInfoTab').toggleClass('foldedSection');$('#directiveInfoTab').toggleClass('unfoldedSection');">
-  	  	  <div class="section-title">Directive information</div>
-  	  	</div>
-  	  	<div id="directiveInfo">
-          <div id="nameField">
-            Here comes the name field
-          </div>
-          <div id="tagField">
-            Here comes the tag field
-          </div>
-          <div id="shortDescriptionField">
-            Here comes the shortDescription field
-          </div>
-          <div id="longDescriptionFieldMarkdownContainer">
-            <label class="wbBaseFieldLabel"><span class="text-fit">Description</span>
-              <i class="fa fa-pencil text-primary cursorPointer half-opacity edit-description-icon" onmouseenter="toggleOpacity(this)" title="Edit description" onmouseout="toggleOpacity(this)" onclick="toggleMarkdownEditor('longDescriptionField')"></i>
-            </label>
-            <div class="markdown">
-              <div id="longDescriptionFieldMarkdown"></div>
-              <p id="longDescriptionFieldMarkdownEmpty" class="nodisplay half-opacity">No description defined, click on <i class="fa fa-pencil text-primary cursorPointer half-opacity" onmouseenter="toggleOpacity(this)" onmouseout="toggleOpacity(this)" onclick="toggleMarkdownEditor('longDescriptionField')"></i> to edit </p>
-            </div>
-          </div>
-          <div id="longDescriptionFieldContainer" class="nodisplay">
-            <div id="longDescriptionField">
-              Here comes the longDescription field
-            </div>
-            <div id="longDescriptionFieldMarkdownPreviewContainer" class="wbBaseField col-xs-6 row">
-              <label class="col-xs-12 row wbBaseFieldLabel"><span class="text-fit">Preview</span></label>
-              <div id="longDescriptionFieldPreviewMarkdown" class=" col-xs-12 row markdown"></div>
-            </div>
-          </div>
-          <div >
-            <label class="wbBaseFieldLabel"><span class="text-fit">Technique documentation</span></label>
-            <div class="markdown">
-              <div id="techniqueDescription"></div>
-            </div>
-          </div>
-          <div id="priority">
-            Here come the priority field
-          </div>
-          <div class="wbBaseField form-group">
-            <div id="policyModesLabel">
-              Here come the policy mode label
-            </div>
-            <div id="policyModes">
-              Here come the policy mode field
-            </div>
-          </div>
-          <div id="version">
-            Here come the version field
-          </div>
-          <div class="directiveTechnicalInfo" id="showTechnical"></div>
-          <div id="technicalDetails" style="display:none" class="well">
-            <div class="directiveTechnicalInfo row wbBaseField form-group">
-              <label>Directive ID</label>
-              <div id="directiveID" class="fake-form-control readonly">
-                Here comes the directive ID
-              </div>
-            </div>
-            <div class="directiveTechnicalInfo row wbBaseField form-group">
-              <label>Technique ID</label>
-              <div id="techniqueID" class="fake-form-control readonly">
-                Technique ID
-              </div>
-            </div>
-            <div class="directiveTechnicalInfo row wbBaseField form-group">
-              <label>Technique name</label>
-                <div id="techniqueName">
-                  Technique name
-                </div>
-            </div>
-            <div class="directiveTechnicalInfo row wbBaseField form-group">
-              <label>Technique unicity</label>
-              <div id="isSingle" class="fake-form-control readonly">
-                isSingle
-              </div>
-            </div>
-            <div class="directiveTechnicalInfo row wbBaseField form-group">
-              <label>Supported operating systems</label>
-              <div id="compatibilityOs" class="fake-form-control readonly">
-                System Compatibility
-              </div>
-            </div>
-            <div class="directiveTechnicalInfo row wbBaseField form-group">
-              <label>Supported agents</label>
-              <div id="compatibilityAgent" class="fake-form-control readonly">
-                System Compatibility
-              </div>
-            </div>
-          </div>
-        </div>
-        <div  id="directiveParametersTab" class="unfoldedSection" onclick="$('#parameters').toggle(400); $('#directiveParametersTab').toggleClass('foldedSection');$('#directiveParametersTab').toggleClass('unfoldedSection');">
-          <div class="section-title">Parameters</div>
-          <div id="notifications"></div>
-        </div>
-        <div id="parameters">Here goes the list of parameters</div>
-      
-        <div  id="ruleTargetSection" class="unfoldedSection" onclick="$('#directiveRulesTab').toggle(400); $('#ruleTargetSection').toggleClass('foldedSection');$('#ruleTargetSection').toggleClass('unfoldedSection');">
-          <div class="section-title">Target Rules</div>
-        </div>
-  	  	<div id="directiveRulesTab"></div>
-      </div>
-      <lift:authz role="directive_edit">
-        <div id="directiveToolbar" class="box-footer">
-          <div id="removeAction" style="float:left"></div>
-          <div id="desactivateAction" style="float:left; margin-left:20px;"></div>
-          <button id="clone">[Clone]</button>
-          <div class="cpiefsave">
-            <button id="save">Save</button>
-          </div>
+          <h4>Pending change requests</h4>
+          <p>
+            The following pending change requests affect this Directive, you should check that your modification is not already pending:
+          </p>
+          <ul id="changeRequestList"></ul>
         </div>
       </lift:authz>
-  </div>
-    <div id="removeActionDialog"        class="modal fade" data-keyboard="true" tabindex="-1"></div>
-    <div id="disableActionDialog"       class="modal fade" data-keyboard="true" tabindex="-1"></div>
-    <div id="confirmUpdateActionDialog" class="modal fade" data-keyboard="true" tabindex="-1"></div>
-    <div id="createCloneDirectivePopup" class="modal fade" data-keyboard="true" tabindex="-1">
-      <lift:ignore>
-        This div gets the content of the createDirective injected within
-      </lift:ignore>
+
+      <div id="directiveInfo">
+        <div id="nameField">
+          Here comes the name field
+        </div>
+        <div id="tagField">
+          Here comes the tag field
+        </div>
+        <div id="shortDescriptionField">
+          Here comes the shortDescription field
+        </div>
+        <div id="longDescriptionFieldMarkdownContainer">
+          <label class="wbBaseFieldLabel"><span class="text-fit">Description</span>
+            <i class="fa fa-pencil text-primary cursorPointer half-opacity edit-description-icon" onmouseenter="toggleOpacity(this)" title="Edit description" onmouseout="toggleOpacity(this)" onclick="toggleMarkdownEditor('longDescriptionField')"></i>
+          </label>
+          <div class="markdown">
+            <div id="longDescriptionFieldMarkdown"></div>
+            <p id="longDescriptionFieldMarkdownEmpty" class="nodisplay half-opacity">No description defined, click on <i class="fa fa-pencil text-primary cursorPointer half-opacity" onmouseenter="toggleOpacity(this)" onmouseout="toggleOpacity(this)" onclick="toggleMarkdownEditor('longDescriptionField')"></i> to edit </p>
+          </div>
+        </div>
+        <div id="longDescriptionFieldContainer" class="nodisplay">
+          <div id="longDescriptionField">
+            Here comes the longDescription field
+          </div>
+          <div id="longDescriptionFieldMarkdownPreviewContainer" class="wbBaseField col-xs-6 row">
+            <label class="col-xs-12 row wbBaseFieldLabel"><span class="text-fit">Preview</span></label>
+            <div id="longDescriptionFieldPreviewMarkdown" class=" col-xs-12 row markdown"></div>
+          </div>
+        </div>
+        <div >
+          <label class="wbBaseFieldLabel"><span class="text-fit">Technique documentation</span></label>
+          <div class="markdown">
+            <div id="techniqueDescription"></div>
+          </div>
+        </div>
+        <div id="priority">
+          Here come the priority field
+        </div>
+        <div class="wbBaseField form-group">
+          <div id="policyModesLabel">
+            Here come the policy mode label
+          </div>
+          <div id="policyModes">
+            Here come the policy mode field
+          </div>
+        </div>
+        <div id="version">
+          Here come the version field
+        </div>
+        <div class="directiveTechnicalInfo" id="showTechnical"></div>
+        <div id="technicalDetails" style="display:none" class="well">
+
+          <table>
+            <tr>
+              <td><label>Directive ID:</label></td>
+              <td id="directiveID">
+                Directive ID:
+              </td>
+            </tr>
+            <tr>
+              <td><label>Technique ID:</label></td>
+              <td id="techniqueID">
+                Technique ID
+              </td>
+            </tr>
+            <tr>
+              <td><label>Technique name:</label></td>
+              <td id="techniqueName">
+                Technique name
+              </td>
+            </tr>
+            <tr>
+              <td><label>Technique unicity:</label></td>
+              <td id="isSingle">
+                Technique unicity
+              </td>
+            </tr>
+          </table>
+        </div>
+      </div>
+
+      <h2 id="parametersTitle" class="title-tab">Parameters</h2>
+      <div id="parameters">Here goes the list of parameters</div>
+      <h2 id="directiveRulesTabTitle" class="title-tab">Target rules</h2>
+      <div id="directiveRulesTab"></div>
     </div>
+  </div>
+  <lift:ignore>
+    This div gets the content of the createDirective injected within
+  </lift:ignore>
+  <div id="removeActionDialog"        class="modal fade" data-keyboard="true" tabindex="-1"></div>
+  <div id="disableActionDialog"       class="modal fade" data-keyboard="true" tabindex="-1"></div>
+  <div id="confirmUpdateActionDialog" class="modal fade" data-keyboard="true" tabindex="-1"></div>
+  <div id="createCloneDirectivePopup" class="modal fade" data-keyboard="true" tabindex="-1"></div>
 </component-form>
 
 <component-informationTab>
   <div class="page-title">Directive information</div>
-    <hr class="spacer" />
+  <hr class="spacer" />
   <div id="nameField">
     Here comes the name field
   </div>
@@ -202,31 +209,31 @@
     <div class="directiveTechnicalInfo">
       <b class="threeCol">Technique name: </b>
       <span id="techniqueName">
-        Technique name
-      </span>
+      Technique name
+    </span>
     </div>
     <hr class="spacer"/>
 
     <div class="directiveTechnicalInfo">
       <b class="threeCol">Technique description: </b>
       <span id="techniqueDescription">
-        Technique description
-      </span>
+      Technique description
+    </span>
     </div>
     <hr class="spacer"/>
 
     <div class="directiveTechnicalInfo">
       <b class="threeCol">Technique unicity: </b>
       <span id="isSingle">
-        isSingle
-      </span>
+      isSingle
+    </span>
     </div>
     <hr class="spacer"/>
     <div class="directiveTechnicalInfo">
       <b class="threeCol">Directive Rudder ID: </b>
       <span id="rudderID">
-        Here comes the rudder ID
-      </span>
+      Here comes the rudder ID
+    </span>
     </div>
     <hr class="spacer"/>
   </div>
