Fixes #18164: Add a shortcut to create directive with latest technique version from the tree

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-template.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-template.css
@@ -47,11 +47,20 @@
 }
 .content-wrapper .rudder-template .jstree{
   margin-top: 0;
+  padding: 0 0 0 10px;
 }
 .content-wrapper .rudder-template .jstree .jstree-anchor {
   display: inline-block;
   padding-right: 10px;
   word-break: break-word;
+  width: calc(100% - 15px);
+}
+.content-wrapper .rudder-template .jstree .jstree-anchor .btn.create{
+  float: right;
+  width: 25px;
+}
+.content-wrapper .rudder-template .jstree .jstree-anchor:hover .btn.create{
+  opacity: 1 !important;
 }
 .content-wrapper .rudder-template .jstree  .jstree-node{
   overflow: hidden;
