Fixes #18324: Replace old notifications by those of Rudder

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-notifications.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-notifications.css
@@ -25,6 +25,10 @@
     animation-fill-mode: both
 }
 
+.rudder-notification .callout-fade > p{
+  white-space: pre-line;
+}
+
 @-webkit-keyframes bounceInRight {
     0%,
     60%,
