Fixes #18329: Some page sections blink while the Technique Editor is loading

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-technique-editor.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-technique-editor.css
@@ -409,6 +409,9 @@ ul.tabs-list > li > .badge{
 ul.tabs-list > li > .badge.empty{
   opacity: .4;
 }
+.rudder-template.loaded{
+  display: flex !important;
+}
 .rudder-template .template-main .main-navbar ul > li > a{
   min-height: 23px;
 }
