--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentComplianceMode.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentComplianceMode.html
@@ -2,7 +2,7 @@
 
 <div  id="complianceMode">
   <div class="inner-portlet"  id="complianceModeController" ng-controller="complianceModeController">
-  <div class="page-title"  ng-hide="isNodePage">Compliance reporting mode</div>
+  <h3 class="page-title"  ng-hide="isNodePage">Compliance reporting mode</h3>
   <div class="portlet-content">
     <div ng-hide="isNodePage">
       <div class="col-lg-12 callout-fade callout-info">
@@ -87,7 +87,7 @@
       </div>
 
       <div ng-hide="complianceMode.name !== 'changes-only'" class="agent-run-form animate-hide">
-        <div class="page-subtitle">Agent run heartbeat</div>
+        <h4 class="space-top">Agent run heartbeat</h4>
         <div class="portlet-content" >
           <div class="callout-fade callout-info">
           <!-- global run is defined on node page, so first section is displayed in global settings page -->
@@ -153,7 +153,7 @@
       <lift:authz role="administration_write">
         <div class="form-group" ng-hide="isNodePage && complianceMode.name === 'full-compliance'">
           <div class="pull-left control-label">
-            <button type="submit" class="btn btn-default" ng-click="save()" ng-disabled="complianceModeForm.$invalid || isUnchanged()" id="complianceModeSubmit">Save changes</button>
+            <button type="submit" class="btn btn-success" ng-click="save()" ng-disabled="complianceModeForm.$invalid || isUnchanged()" id="complianceModeSubmit">Save changes</button>
           </div>
         </div>
       </lift:authz>
