--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentNodeState.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentNodeState.html
@@ -34,7 +34,7 @@
             <select class="form-control input-sm" id="nodeStateSelect"></select>
           </div>
           <div class="form-group node-submit">
-            <button type="submit" class="btn btn-default" id="nodeStateSubmit">Save changes</button>
+            <button type="submit" class="btn btn-success" id="nodeStateSubmit">Save changes</button>
           </div>
         </lift:authz>
         <div class="currentNodeState form-group">
