Fixes #18265: Broken display of error icon in menu when there is a plugin error

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-menu.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-menu.css
@@ -1687,6 +1687,11 @@ form .tooltip-content p {
   color: #337ab7;
   cursor:help;
 }
+.sidebar-collapse .plugin-icon.icon-info{
+  position: relative;
+  top: 8px;
+  left: -13px;
+}
 .content-wrapper label > .icon-info:hover{
   color: #286090;
 }
