--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentAgentPolicyMode.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentAgentPolicyMode.html
@@ -1,6 +1,6 @@
 <agentpolicymode-form>
    <div class="inner-portlet" id="auditMode" ng-controller="auditmodeCtrl">
-     <h3 id="agentPolicyMode" class="page-title">Node Policy Mode</h3>
+     <h3 id="agentPolicyMode" class="page-title">Policy mode</h3>
      <div class="col-xs-12 callout-fade callout-info">
        <div class="marker">
          <span class="glyphicon glyphicon-info-sign"></span>
@@ -111,5 +111,5 @@
 </agentpolicymode-form>
 
 <agentpolicymode-badge>
-  <span class="rudder-label label-enforce label-sm" data-toggle="tooltip" data-placement="top" data-html="true" title="<p class='title-tooltip'>Node Policy Mode</p><div class='tooltip-content'><p>This node is in <b>Enforce</b> mode.</p><p> This mode is an override applied to this node.</p><p> You can change it in the node's settings.</p></div>"></span>
+  <span class="rudder-label label-enforce label-sm" data-toggle="tooltip" data-placement="top" data-html="true" title="<p class='title-tooltip'>Policy Mode</p><div class='tooltip-content'><p>This node is in <b>Enforce</b> mode.</p><p> This mode is an override applied to this node.</p><p> You can change it in the node's settings.</p></div>"></span>
 </agentpolicymode-badge>
