--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentComplianceMode.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentComplianceMode.html
@@ -2,7 +2,7 @@
 
 <div  id="complianceMode">
   <div class="inner-portlet"  id="complianceModeController" ng-controller="complianceModeController">
-  <h3 class="page-title"  ng-hide="isNodePage">Compliance reporting mode</h3>
+  <h3 class="page-title"  ng-hide="isNodePage">Reporting mode</h3>
   <div class="portlet-content">
     <div ng-hide="isNodePage">
       <div class="col-lg-12 callout-fade callout-info">
