Fixes #18389: Beautify API accounts page

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-template.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-template.css
@@ -236,6 +236,15 @@
 .rudder-template.one-col .template-main .main-header{
   padding: 15px 30px;
 }
+@media (max-width:1200px) {
+  .rudder-template .one-col .main-header,
+  .rudder-template.one-col .template-main .main-header{
+    padding: 15px;
+  }
+  .rudder-template .template-main .main-details{
+    padding: 10px 15px !important;
+  }
+}
 .rudder-template .template-main .main-header .header-description{
   margin-top: 10px;
   color: #222D42AA;
