Fixes #18424: Beautify Nodes page

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-bootstrap.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-bootstrap.css
@@ -668,6 +668,7 @@ body{
 
 .content-wrapper .homePage {
   background-color: rgb(236, 240, 245);
+  padding: 15px;
 }
 
 .content-wrapper .jstree {
