--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentNodeState.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentNodeState.html
@@ -1,6 +1,6 @@
 <node-state>
 <div class="inner-portlet" id="nodeState">
-  <div class="page-title">Node state</div>
+  <h3 class="page-title">Node state</h3>
   <div class="portlet-content" id="nodeStateController">
     <div class="col-xs-12 callout-fade callout-info">
       <div class="marker">
