--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentRuleEditForm.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentRuleEditForm.html
@@ -3,6 +3,9 @@
 <component-staticinit>
 <head>
   <style type="text/css">
+    .content-wrapper > .rudder_col{
+      padding: 15px;
+    }
     .topLevelAction .twoColumns {
       text-align: center;
       vertical-align: middle;
