--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-rules.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-rules.css
@@ -34,6 +34,9 @@
 *
 *************************************************************************************
 */
+#viewAllRulesZone {
+  padding: 15px;
+}
 #editRuleZone{
   font-size:14px;
 }
