Fixes #7967: Make fields of node lists customizable

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-datatable.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-datatable.css
@@ -479,3 +479,12 @@ table.dataTable tr.dtrg-group td {
 td.greyBackground, th.greyBackground {
   background-color : #eeeeee;
 }
+
+
+#first_line_header {
+  margin-bottom: 5px;
+}
+
+#first_line_header .dataTables_filter {
+  margin-right: 15px;
+}
