Fixes #18463: Header of some page hides menu from the left side

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-template.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-template.css
@@ -231,6 +231,7 @@
   padding: 15px;
   max-height: initial;
   position: static;
+  z-index: 1;
 }
 .rudder-template .one-col .main-header,
 .rudder-template.one-col .template-main .main-header{
